--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@
 }
 
 .header {
+  position: relative;
   display: grid;
   block-size: 100vh;
   min-block-size: 668px;
@@ -49,7 +50,7 @@
 
 .decorated-zone::after {
   position: absolute;
-  top: 633px;
+  bottom: 10px;
   left: 10px;
   content: '';
   display: block;
@@ -61,14 +62,8 @@
 
 @media (width >= 768px) {
   .decorated-zone::after {
-    top: 980px;
+    bottom: 20px;
     left: 20px;
-  }
-}
-
-@media (width >= 1024px) {
-  .decorated-zone::after {
-    top: 723px;
   }
 }
 
@@ -229,18 +224,12 @@
 }
 
 .sections {
-  min-block-size: 5435px;
+  margin-block-end: 37px;
 }
 
 @media (width >= 768px) {
   .sections {
-    min-block-size: 3802px;
-  }
-}
-
-@media (width >= 1024px) {
-  .sections {
-    min-block-size: 3472px;
+    padding-block-end: 10px;
   }
 }
 
@@ -459,7 +448,6 @@ h2 {
 @media (width >= 768px) {
   .gallery .gallery__item {
     grid-template-columns: auto auto auto;
-    grid-template-rows: 192px 230px 318px;
     gap: 20px;
     margin-inline-start: 20px;
     margin-inline-end: 20px; 
@@ -468,7 +456,6 @@ h2 {
 
 @media (width >= 1024px) {
   .gallery .gallery__item {
-    grid-template-rows: 260px 315px 428px;
     margin-block-start: 0;
   }
 }
@@ -517,7 +504,6 @@ h2 {
 
 @media (width >= 768px) {
   .footer {
-    max-block-size: 0;
     min-block-size: 1024px;
   }
 }
